binding/go-bridge/lib/gobridge.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/skills-fs/skills-fs/binding/go-bridge */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 18 "bridge.go"

#include <stdint.h>
#include <stdlib.h>

// Callback type for host-provided providers.
// action, params_json are UTF-8 strings. payload may be NULL.
// On success, callback allocates *out_data with malloc and sets *out_len.
// Returns 0 on success, -1 on error.
typedef int (*skills_fs_provider_cb)(
	uintptr_t handle,
	const char* action,
	const char* params_json,
	const char* payload,
	int payload_len,
	char** out_data,
	int* out_len
);

// Defined in callback.c — calls the function pointer since CGo can't do it directly.
extern int skills_fs_provider_cb_call(
	skills_fs_provider_cb cb,
	uintptr_t handle,
	const char* action,
	const char* params_json,
	const char* payload,
	int payload_len,
	char** out_data,
	int* out_len
);

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern uintptr_t skills_fs_create(void);
extern void skills_fs_shutdown(uintptr_t handle);
extern char* skills_fs_last_error(uintptr_t handle);
extern int skills_fs_mount_blob(uintptr_t handle, char* path, unsigned int mode);
extern int skills_fs_mount_api(uintptr_t handle, char* path, char* providerID, char* action);
extern int skills_fs_unmount(uintptr_t handle, char* path);
extern int skills_fs_rename(uintptr_t handle, char* oldPath, char* newPath);
extern char* skills_fs_stat(uintptr_t handle, char* path, int* outLen);
extern char* skills_fs_readdir(uintptr_t handle, char* path, int* outLen);
extern char* skills_fs_read(uintptr_t handle, char* path, int* outLen);
extern int skills_fs_write(uintptr_t handle, char* path, char* data, int length);
extern void skills_fs_free(void* p);
extern int skills_fs_register_provider(uintptr_t handle, char* id, skills_fs_provider_cb cb);

#ifdef __cplusplus
}
#endif